# labwc-tweaks

./: CMakeLists.txt  Config.cmake  README  README.md  bootstrap  environment.c  find-themes.c  keyboard-layouts.c  keyboard-layouts.h  main.c  meson.build  stack-appearance.c  stack-appearance.h  stack-lang.c  stack-lang.h  stack-mouse.c  stack-mouse.h  state.h  tab-appearance.c  tab-appearance.h  theme.c  theme.h  tweaks.h  update.c  update.h  xml.c  xml.h
.github/workflows/: build.yml
cmake/: LXQtTranslate.cmake
data/: labwc-tweaks.desktop  labwc_tweaks.appdata.xml.in  labwc_tweaks.desktop.in  meson.build
data/translations/: labwc-tweaks.ts  labwc-tweaks_ar.ts  labwc-tweaks_ca.ts  labwc-tweaks_cs.ts  labwc-tweaks_da.ts  labwc-tweaks_de.qm  labwc-tweaks_de.ts  labwc-tweaks_el.ts  labwc-tweaks_en_GB.ts  labwc-tweaks_en_IE.ts  labwc-tweaks_en_US.ts  labwc-tweaks_es.ts  labwc-tweaks_et.ts  labwc-tweaks_eu.ts  labwc-tweaks_fa.ts  labwc-tweaks_fi.ts  labwc-tweaks_fr.ts  labwc-tweaks_gl.ts  labwc-tweaks_he.ts  labwc-tweaks_hr.ts  labwc-tweaks_hu.ts  labwc-tweaks_it.ts  labwc-tweaks_ja.ts  labwc-tweaks_ka.ts  labwc-tweaks_kab.ts  labwc-tweaks_kk.ts  labwc-tweaks_ko.ts  labwc-tweaks_lt.ts  labwc-tweaks_ms.ts  labwc-tweaks_nl.ts  labwc-tweaks_pa.ts  labwc-tweaks_pl.ts  labwc-tweaks_pt.ts  labwc-tweaks_pt_BR.ts  labwc-tweaks_ro.ts  labwc-tweaks_ru.ts  labwc-tweaks_sk.ts  labwc-tweaks_sl.ts  labwc-tweaks_tr.ts  labwc-tweaks_vi.ts  (+34 more)
src/: .clang-format  .editorconfig  about.cpp  about.h  about.ui  appearance.cpp  appearance.h  appearance.ui  appearance2.ui  behaviour.cpp  behaviour.h  behaviour.ui  behaviour.ui.~  environment.cpp  environment.h  evdev-lst-layouts.h  find-themes.cpp  find-themes.h  gen-layout-list  keyboard.cpp  keyboard.h  keyboard.ui  language.cpp  language.h  language.ui  layoutmodel.cpp  layoutmodel.h  log.h  macros.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  maindialog1.cpp  mouse.cpp  mouse.h  mouse.ui  mouse.ui.~  nodename.cpp  nodename.h  (+21 more)
tests/: meson.build  t1000-add-xpath-node.c  t1000-add-xpath-node.cpp  t1001-nodenames.c  t1001-nodenames.cpp
tweaks-qt/: .editorconfig  evdev-lst-layouts.h  gen-layout-list  layoutmodel.cpp  layoutmodel.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
